[package]
name = "genegraph-storage"
version = "0.1.0"
edition = "2024"
description = "Vector database: dispersion models for search and graph analysis"
authors = ["Lorenzo <tunedconsulting@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/tuned-org-uk/genefold-storage"
homepage = "https://github.com/tuned-org-uk/genefold-storage"
documentation = "https://docs.rs/genefold-storage"
readme = "README.md"
keywords = ["vector-search", "vector-space", "graph-signal", "similarity-search", "mlops", "aiops"]
categories = ["file system", "database", "graph", "data"]
exclude = [
    "target/*",
    "Cargo.lock",
    ".git/*",
    ".github/*",
    "*.tmp",
    "docs/*",
    "becnhes/*",
    "examples/*"

]

[dependencies]
smartcore = {version = "^0.4.8"}
ordered-float = "5.1.0"
rayon = "1.11.0"
sprs = "0.11.4"
log = "0.4.28"
env_logger = "0.11.8"
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
lance = { version = " 0.39.0"}
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.145"}
futures = "0.3.31"
arrow-array = "^56.1.0"
arrow = { version = "^56.1.0" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
parquet = { version = "^56.1.0" }

[dev-dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
approx = "0.5.1"
